--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
+  color: #808396;
+  font-weight: 400;
 }
 canvas {
   margin: 0 auto;
@@ -13,14 +16,14 @@ canvas {
   color: blue;
 }
 .styleControls {
-  background: #BEDDE4;
+  background: rgba(70, 177, 249, 0.2);
   width: 300px;
   display: inline-block;
   height: 800px;
   vertical-align: top;
   text-align: center;
 }
-.styleControls div {
+.allign {
   width: 200px;
   margin: 0 auto;
 }
@@ -70,4 +73,20 @@ div.styleMode {
   padding: 10px;
   width: 180px;
   border-radius: 10px;
+}
+#newLayer {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 10px 0;
+}
+#newLayer .plusIcon {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  border: 2px solid #808396;
+  border-radius: 5px;
+  background: #c4c6d6;
+}
+#newLayer:hover {
+  background: rgba(70, 177, 249, 0.2);
 }
