--- a/style.less
+++ b/style.less
@@ -10,6 +10,9 @@
 body{
 	margin: 0;
 	padding: 0;
+	font-family: 'Roboto', sans-serif;
+	color: @darkGrey;
+	font-weight: 400;
 }
 
 canvas{
@@ -25,7 +28,7 @@ canvas{
 }
 
 .styleControls{
-	background: #BEDDE4;
+	background: fade(@lightCyan, 20%);
 	width: 300px;
 	display: inline-block;
 	height: 800px;
@@ -33,7 +36,7 @@ canvas{
 	text-align: center;
 }
 
-.styleControls div{
+.allign{
 	width: 200px;
 	margin: 0 auto;
 }
@@ -93,6 +96,27 @@ div.styleMode{
 	width: 180px;
 	border-radius: 10px;
 }
+
+#newLayer{
+	display: inline-block;
+	vertical-align: middle;
+	padding: 10px 0;
+}
+
+#newLayer .plusIcon{
+	display: inline-block;
+	width: 18px;
+	height: 18px;
+	border: 2px solid @darkGrey;
+	border-radius: 5px;
+	background: @lightGrey;
+}
+
+#newLayer:hover{
+	background: fade(@lightCyan, 20%);
+
+}
+
 
 @media (max-width: 600px) {
 	
