--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,9 @@ div.styleMode {
   left: 0px;
 }
 #shapeSize-range,
-#gridSize-range {
+#gridSize-range,
+#xOffset-range,
+#yOffset-range {
   width: 200px;
   height: 19px;
   background: #808396;
@@ -52,19 +54,25 @@ div.styleMode {
   border-radius: 10px;
 }
 #gridSize-range .ui-slider-range,
-#shapeSize-range .ui-slider-range {
+#shapeSize-range .ui-slider-range,
+#xOffset-range .ui-slider-range,
+#yOffset-range .ui-slider-range {
   background: #46b1f9;
   border-radius: 10px;
 }
 #gridSize-range .ui-slider-handle,
-#shapeSize-range .ui-slider-handle {
+#shapeSize-range .ui-slider-handle,
+#xOffset-range .ui-slider-handle,
+#yOffset-range .ui-slider-handle {
   margin-top: 3px;
   background: #46b1f9;
   border: 2px solid #3789db;
   border-radius: 15px;
 }
 #gridSize-range .ui-state-active,
-#shapeSize-range .ui-state-active {
+#shapeSize-range .ui-state-active,
+#xOffset-range .ui-state-active,
+#yOffset-range .ui-state-active {
   background: #46b1f9;
   border: 2px solid #fff;
 }
