--- a/style.less
+++ b/style.less
@@ -60,12 +60,11 @@ div.styleMode{
 	left: 0px;
 }
 
-
 #shapeSize-range,
 #gridSize-range,
 #xOffset-range, 
 #yOffset-range{
-// .slider{
+// .slider-range{
 	width: 200px;
 	height: 19px;
 	background: #808396;
