one layer at a time, with gridand shape control

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,13 @@ canvas {
   display: inline-block;
   visibility: visible;
 }
+.active {
+  color: red;
+}
+.gridControl div {
+  width: 40%;
+  border: 1px solid yellow;
+}
 #slider1 input#shapeSize {
   color: blue;
 }
