--- a/style.less
+++ b/style.less
@@ -23,6 +23,15 @@ canvas{
 	visibility: visible;
 }
 
+.active{
+	color: red;
+}
+
+.gridControl div{
+	width: 40%;
+	border: 1px solid yellow;
+}
+
 #slider1 input#shapeSize{
 	color: blue;
 }
