--- a/css/style.css
+++ b/css/style.css
@@ -13,29 +13,52 @@ canvas {
   visibility: visible;
 }
 .active {
-  color: red;
+  color: #46b1f9;
+  background: rgba(70, 177, 249, 0.2);
 }
-.gridControl div {
-  width: 40%;
-  border: 1px solid yellow;
+.layerName {
+  display: inline-block;
 }
-#slider1 input#shapeSize {
-  color: blue;
+.edit {
+  display: inline-block;
+  margin-left: 5px;
+  vertical-align: top;
+  width: 18px;
+  height: 18px;
+  background-image: url(../images/edit-01.png);
+  background-size: 20px;
+}
+.editActive {
+  background-image: url(../images/edit-02.png);
 }
 .styleControls {
   background: rgba(70, 177, 249, 0.2);
   width: 300px;
   display: inline-block;
-  height: 800px;
+  height: 100vh;
   vertical-align: top;
   text-align: center;
 }
+#gridControl div {
+  padding: 5px 0;
+  width: 49%;
+  display: inline-block;
+  border-bottom: 1px dashed rgba(128, 131, 150, 0.6);
+}
+#slider1 input#shapeSize {
+  color: blue;
+}
 .allign {
-  width: 200px;
+  width: 300px;
   margin: 0 auto;
+  border-bottom: 1px dashed rgba(128, 131, 150, 0.6);
 }
 div.styleMode {
   padding: 5px 0;
+}
+.layer {
+  padding: 10px 0;
+  border-bottom: 1px dashed rgba(128, 131, 150, 0.6);
 }
 .create {
   margin: 0;
@@ -94,10 +117,11 @@ div.styleMode {
   vertical-align: middle;
   padding: 10px 0;
 }
-#newLayer .plusIcon {
+.plusIcon {
   display: inline-block;
-  width: 18px;
-  height: 18px;
+  width: 16px;
+  height: 15px;
+  padding: 0 1px 3px 1px;
   border: 2px solid #808396;
   border-radius: 5px;
   background: #c4c6d6;
