--- a/style.less
+++ b/style.less
@@ -24,34 +24,64 @@ canvas{
 }
 
 .active{
-	color: red;
+	color: @lightCyan;
+	background: fade(@lightCyan, 20%);
 }
 
-.gridControl div{
-	width: 40%;
-	border: 1px solid yellow;
+.layerName{
+	display: inline-block;
+}
+.edit{
+	display: inline-block;
+	margin-left: 5px;
+	vertical-align: top;
+	width: 18px;
+	height: 18px;
+	// background: fade(blue, 20%);
+	background-image: url(../images/edit-01.png);
+	background-size: 20px;
 }
 
-#slider1 input#shapeSize{
-	color: blue;
+.editActive{
+	background-image: url(../images/edit-02.png);
 }
 
 .styleControls{
 	background: fade(@lightCyan, 20%);
 	width: 300px;
 	display: inline-block;
-	height: 800px;
+	// height: 800px;
+	height: 100vh;
 	vertical-align: top;
 	text-align: center;
 }
 
+#gridControl div{
+	padding: 5px 0;
+	width: 49%;
+	display: inline-block;
+	border-bottom: 1px dashed fade(@darkGrey, 60%);
+}
+
+#slider1 input#shapeSize{
+	color: blue;
+}
+
+
+
 .allign{
-	width: 200px;
+	width: 300px;
 	margin: 0 auto;
+	border-bottom: 1px dashed fade(@darkGrey, 60%);
 }
 
 div.styleMode{
 	padding: 5px 0;
+}
+
+.layer{
+	padding: 10px 0;
+	border-bottom: 1px dashed fade(@darkGrey, 60%);
 }
 
 .create{
@@ -120,10 +150,12 @@ div.styleMode{
 	padding: 10px 0;
 }
 
-#newLayer .plusIcon{
+.plusIcon{
 	display: inline-block;
-	width: 18px;
-	height: 18px;
+	// font-size: 14pt;
+	width: 16px;
+	height: 15px;
+	padding: 0 1px 3px 1px;
 	border: 2px solid @darkGrey;
 	border-radius: 5px;
 	background: @lightGrey;
@@ -131,7 +163,6 @@ div.styleMode{
 
 #newLayer:hover{
 	background: fade(@lightCyan, 20%);
-
 }
 
 
