--- a/style.less
+++ b/style.less
@@ -15,6 +15,11 @@ body{
 	font-weight: 400;
 }
 
+#logoCircle{
+	position: relative;
+	top: 30px;
+}
+
 canvas{
 	margin: 0 auto;
 	border: 2px solid #eee;
@@ -138,10 +143,24 @@ div.styleMode{
 }
 
 #colourTextBox{
+	margin: 20px 0;
 	border: 2px solid @lightGrey;
-	padding: 10px;
+	padding: 6px 10px;
 	width: 180px;
 	border-radius: 10px;
+	font-family: 'Roboto', sans-serif;
+	font-size: 14px;
+}
+
+#textBox{
+	margin: 50px 0 20px 0;
+	padding: 6px 10px;
+	width: 180px;
+	border-radius: 10px;
+	border: 2px solid @lightGrey;
+	font-family: 'Roboto', sans-serif;
+	font-size: 14px;
+	color: @darkGrey;
 }
 
 #newLayer{
