--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@ body {
   color: #808396;
   font-weight: 400;
 }
+#logoCircle {
+  position: relative;
+  top: 30px;
+}
 canvas {
   margin: 0 auto;
   border: 2px solid #eee;
@@ -107,10 +111,23 @@ div.styleMode {
   border: 2px solid #fff;
 }
 #colourTextBox {
+  margin: 20px 0;
   border: 2px solid #c4c6d6;
-  padding: 10px;
+  padding: 6px 10px;
   width: 180px;
   border-radius: 10px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+}
+#textBox {
+  margin: 50px 0 20px 0;
+  padding: 6px 10px;
+  width: 180px;
+  border-radius: 10px;
+  border: 2px solid #c4c6d6;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  color: #808396;
 }
 #newLayer {
   display: inline-block;
