--- a/style.less
+++ b/style.less
@@ -15,17 +15,27 @@ body{
 	font-weight: 400;
 }
 
+.floatAllMiddle{
+
+	// border: 2px solid blue;
+	margin: 0 auto;
+}
+
 #logoCircle{
 	position: relative;
 	top: 30px;
 }
 
 canvas{
-	margin: 0 auto;
+	// margin: 0 auto;
 	border: 2px solid #eee;
 	position: relative;
 	display: inline-block;
 	visibility: visible;
+}
+
+#canvasContainer{
+	display: inline-block;
 }
 
 .active{
@@ -72,7 +82,11 @@ canvas{
 	color: blue;
 }
 
-
+#styleControl div{
+	width: 50px;
+	height: 30px;
+	display: inline-block;
+}
 
 .allign{
 	width: 300px;
