--- a/style.less
+++ b/style.less
@@ -121,7 +121,8 @@ div.styleMode{
 #shapeSize-range,
 #gridSize-range,
 #xOffset-range, 
-#yOffset-range{
+#yOffset-range,
+#opacity-range{
 // .slider-range{
 	width: 200px;
 	height: 19px;
@@ -133,7 +134,8 @@ div.styleMode{
 #gridSize-range .ui-slider-range,
 #shapeSize-range .ui-slider-range,
 #xOffset-range .ui-slider-range,
-#yOffset-range .ui-slider-range{ 
+#yOffset-range .ui-slider-range,
+#opacity-range .ui-slider-range{ 
 	background: @lightCyan; 
 	border-radius: 10px;
 }
@@ -141,7 +143,8 @@ div.styleMode{
 #gridSize-range .ui-slider-handle,
 #shapeSize-range .ui-slider-handle,
 #xOffset-range .ui-slider-handle,
-#yOffset-range .ui-slider-handle{ 
+#yOffset-range .ui-slider-handle,
+#opacity-range .ui-slider-handle{ 
 	margin-top: 3px;
 	background: @lightCyan;
 	border: 2px solid @darkCyan; 
@@ -151,7 +154,8 @@ div.styleMode{
 #gridSize-range .ui-state-active,
 #shapeSize-range .ui-state-active,
 #xOffset-range .ui-state-active,
-#yOffset-range .ui-state-active{ 
+#yOffset-range .ui-state-active,
+#opacity-range .ui-state-active{ 
 	background: @lightCyan;
 	border: 2px solid #fff;
 }
