--- a/style.less
+++ b/style.less
@@ -16,9 +16,9 @@ body{
 }
 
 .floatAllMiddle{
-
-	// border: 2px solid blue;
+	border: 2px solid blue;
 	margin: 0 auto;
+	display: inline-block;
 }
 
 #logoCircle{
@@ -27,11 +27,34 @@ body{
 }
 
 canvas{
-	// margin: 0 auto;
 	border: 2px solid #eee;
-	position: relative;
-	display: inline-block;
-	visibility: visible;
+}
+
+#save{
+	border-radius: 20px; 
+	width: 100px;
+	background: @lightCyan;
+	padding: 5px;
+	color: white;
+	margin: 10px auto;
+}
+#save:hover{
+	background: @darkCyan;
+}
+
+#viewFeed{
+	border-radius: 20px; 
+	width: 100px;
+	background: @darkGrey;
+	padding: 5px;
+	color: white;
+	margin: 0 auto;
+}
+
+#bottomButtons{
+	width: 250px;
+	position: absolute;
+	bottom: 20px;
 }
 
 #canvasContainer{
@@ -45,6 +68,7 @@ canvas{
 
 .layerName{
 	display: inline-block;
+	padding: 0 10px;
 }
 .edit{
 	display: inline-block;
@@ -63,7 +87,7 @@ canvas{
 
 .styleControls{
 	background: fade(@lightCyan, 20%);
-	width: 300px;
+	width: 250px;
 	display: inline-block;
 	// height: 800px;
 	height: 100vh;
@@ -83,23 +107,57 @@ canvas{
 }
 
 #styleControl div{
-	width: 50px;
+	width: 47px;
 	height: 30px;
 	display: inline-block;
 }
 
+#fontMenu{
+	margin: 0;
+	margin-left: -45px;
+	text-decoration: none;
+	list-style: none;
+	// vertical-align: center;
+	border-top: 1px dashed fade(@darkGrey, 60%);
+	border-bottom: 1px dashed fade(@darkGrey, 60%);
+}
+
+#fontMenu li{
+	width: 60px;
+	height: 30px;
+	vertical-align: top;
+	line-height: 20px;
+	padding-top: 5px;
+	display: inline-block;
+	text-align: center;
+	font-size: 24pt;
+}
+
+#sansSerif{
+	font-family: "Helvetica", sans-serif;
+}
+#serif{
+	font-family: "Georgia", serif;
+}
+#monospace{
+	font-family: "monospace", monospace;
+}
+#brushScript{
+	font-family: "brush script", cursive;
+}
+
 .allign{
-	width: 300px;
+	width: 250px;
 	margin: 0 auto;
 	border-bottom: 1px dashed fade(@darkGrey, 60%);
 }
 
 div.styleMode{
-	padding: 5px 0;
+	padding: 2px 0;
 }
 
 .layer{
-	padding: 10px 0;
+	padding: 5px 0;
 	border-bottom: 1px dashed fade(@darkGrey, 60%);
 }
 
@@ -129,6 +187,14 @@ div.styleMode{
 	background: #808396;
 	border: none;
 	border-radius: 10px;
+}
+
+#slider1 p, 
+#slider2 p, 
+#slider3 p, 
+#slider4 p,
+#slider5 p{
+	margin-bottom: 2px;
 }
 
 #gridSize-range .ui-slider-range,
@@ -184,7 +250,7 @@ div.styleMode{
 #newLayer{
 	display: inline-block;
 	vertical-align: middle;
-	padding: 10px 0;
+	padding: 5px 0;
 }
 
 .plusIcon{
