--- a/style.less
+++ b/style.less
@@ -102,6 +102,10 @@ canvas{
 	border-bottom: 1px dashed fade(@darkGrey, 60%);
 }
 
+#imageContainer{
+	background: white;
+}
+
 #slider1 input#shapeSize{
 	color: blue;
 }
@@ -268,6 +272,25 @@ div.styleMode{
 	background: fade(@lightCyan, 20%);
 }
 
+#lightBox{
+	position: fixed;
+	top: 0px;
+	width: 100%;
+	height: 100vh;
+	background: fade(@darkBlue, 80%);
+	z-index: 50;
+}
+
+#imageContainer{
+	position: absolute;
+	width: 800px;
+	height: 800px;
+	background-size: white;
+	border: 2px solid @lightGrey;
+	margin-top: 100px;
+	left: 50%;
+	margin-left: -400px;
+}
 
 @media (max-width: 600px) {
 	
