--- a/style.less
+++ b/style.less
@@ -111,7 +111,7 @@ canvas{
 }
 
 #styleControl div{
-	width: 47px;
+	width: 32px;
 	height: 30px;
 	display: inline-block;
 }
@@ -126,8 +126,7 @@ canvas{
 	border-bottom: 1px dashed fade(@darkGrey, 60%);
 }
 
-#fontMenu li{
-	width: 60px;
+#fontMenu img{
 	height: 30px;
 	vertical-align: top;
 	line-height: 20px;
