--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+  background: #808396;
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
@@ -15,6 +16,7 @@ body {
   top: 30px;
 }
 canvas {
+  margin: 0 0 0 -7px;
   border: 2px solid #eee;
 }
 #save {
@@ -28,7 +30,7 @@ canvas {
 #save:hover {
   background: #3789db;
 }
-#viewFeed {
+#clear {
   border-radius: 20px;
   width: 100px;
   background: #808396;
@@ -65,7 +67,7 @@ canvas {
   background-image: url(../images/edit-02.png);
 }
 .styleControls {
-  background: rgba(70, 177, 249, 0.2);
+  background: #d9efff;
   width: 250px;
   display: inline-block;
   height: 100vh;
