--- a/style.less
+++ b/style.less
@@ -6,8 +6,10 @@
 @darkBlue: #0a1fc4;
 @lightGrey: #c4c6d6;
 @darkGrey: #808396;
+@otherBlue: #D9EFFF;
 
 body{
+	background: @darkGrey;
 	margin: 0;
 	padding: 0;
 	font-family: 'Roboto', sans-serif;
@@ -27,6 +29,7 @@ body{
 }
 
 canvas{
+	margin: 0 0 0 -7px;
 	border: 2px solid #eee;
 }
 
@@ -42,7 +45,7 @@ canvas{
 	background: @darkCyan;
 }
 
-#viewFeed{
+#clear{
 	border-radius: 20px; 
 	width: 100px;
 	background: @darkGrey;
@@ -86,7 +89,8 @@ canvas{
 }
 
 .styleControls{
-	background: fade(@lightCyan, 20%);
+	background: @otherBlue;
+	// background: fade(@lightCyan, 20%);
 	width: 250px;
 	display: inline-block;
 	// height: 800px;
